style - Add to calender button small device style issue fixed

--- a/srv/static/main.css
+++ b/srv/static/main.css
@@ -31,6 +31,8 @@ html, body{
 .button-secondary{
     color: #336791;
     border: 1px solid #007BFF;
+    display: block;
+    overflow: hidden;
 }
 
 .button:hover{
